Fixed doctor command so that it skips known bad jars combinations.
Only check a few combinations at the same time as doing more makes things even slower.